--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="header">
 	<nav aria-label="Main">
 		<ul>
-			<li><a href="/">Home</a></li>
+			<li><a href="/index.html">Home</a></li>
 			<li><a href="/archive/">Archive</a></li>
 			<li><a href="/about/">About</a></li>
 			<li><a href="/cv">C.V.</a></li>
