--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 			<li><a href="/index.html">Home</a></li>
 			<li><a href="/archive/">Archive</a></li>
 			<li><a href="/about/">About</a></li>
-			<li><a href="/cv">C.V.</a></li>
+			<li><a href="/cv/">C.V.</a></li>
 		</ul>
 	</nav>
 </header>
