--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: #555f55;
-  background-image: url('../images/bg_weatherbeaten.gif');
+  background-image: url('../images/creek.jpg');
 	background-position: top;
   font-size: 18px;
   font-family: "Palatino Linotype", Palatino, Baskerville, "Baskerville Old Face", Garamond, serif;
